fix restaurant page spacing

--- a/src/Pages/RestaurantForm/restaurantform.css
+++ b/src/Pages/RestaurantForm/restaurantform.css
@@ -39,12 +39,6 @@
   border: 1px solid #203c32;
 }
 
-.hours {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
 .day {
   flex-basis: 100px;
 }
@@ -63,7 +57,6 @@
   width: 100%;
   height: 200px;
   background-color: #203c328d;
-  border: 1px solid #203c32;
 }
 
 .day-time {
